# DatasetGeneration

./: CustomDatasetTR3D.py  README.md  generate_points.py  generate_yolo_dataset.py  requirements.txt
Folder-Restructure/: CMakeLists.txt  main.cpp
Plots/: loss calculations.py  mapandmar plot.py  plotmap.py
Visualisation Files/: Visualise depthimages.py
